Fix pom to be valid for maven central