@@ -7,6 +7,30 @@
     <packaging>jar</packaging>
     
     <name>Brooklyn Cloudera Manager and Hadoop Descriptor</name>
+    <description>
+        Brooklyn CDH deployment and management
+    </description>
+    <url>https://github.com/cloudsoft/brooklyn-cdh/</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Brooklyn-CDH Committers</name>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/cloudsoft/brooklyn-cdh.git</connection>
+        <developerConnection>scm:git:git@github.com:cloudsoft/brooklyn-cdh.git</developerConnection>
+        <url>http://github.com/cloudsoft/brooklyn-cdh</url>
+    </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,6 +40,7 @@
         <testng.version>6.3.1</testng.version>
         <brooklyn.version>0.5.0</brooklyn.version>
         <cloudera-whirr-cdh.version>0.8.0-cdh4.1.3</cloudera-whirr-cdh.version>
+        <surefire.version>2.13</surefire.version>
     </properties>
 
     <dependencies>
@@ -137,7 +162,70 @@
                     </descriptors>
                 </configuration>
             </plugin>
-            <plugin>
+                <plugin>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.1.2</version>
+                    <inherited>true</inherited>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.8</version>
+                    <inherited>true</inherited>
+                    <configuration>
+                        <!-- disabling use because of NPE deploying to sonatype:
+                             http://stackoverflow.com/questions/888199/why-does-maven-install-fail-during-javadoc-generation
+                             http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=ac084ab7f47c4e7f1df2117cecd?bug_id=5101868
+                        -->
+                        <use>false</use>
+                        <links>
+                            <link>http://download.oracle.com/javaee/6/api</link>
+                        </links>
+                        <keywords>true</keywords>
+                        <author>false</author>
+                        <quiet>true</quiet>
+                        <aggregate>false</aggregate>
+                        <detectLinks />
+                        <tags>
+                            <tag>
+                                <name>todo</name>
+                                <placement>a</placement>
+                                <head>To-do:</head>
+                            </tag>
+                        </tags>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.1</version>
+                    <executions>
+                        <execution>
+                            <id>sign-artifacts</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
                     <!-- 'release' is not used; easier just to checkout, tag, `mvn deploy` manually
                          with -Dbrooklyn.deployTo=TARGET ... and note we need to update docs and examples, 
                          which is a non-maven task!) -->
@@ -148,6 +236,17 @@
                         <mavenExecutorId>forked-path</mavenExecutorId>
                         <useReleaseProfile>false</useReleaseProfile>
                         <arguments>-Dbrooklyn.deployTo=sonatype</arguments>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.4.1</version>
+                </plugin>
+                <plugin>
+                     <artifactId>maven-surefire-plugin</artifactId>
+                     <version>${surefire.version}</version>
+                     <configuration>
+                         <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
                     </configuration>
                 </plugin>
         </plugins>
